fix: Prevent speaking objects from teleporting on empty tap and ensure consistent black background.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
             font-display: swap;
         }
 
+        html {
+            background-color: #000;
+            height: 100%;
+            width: 100%;
+        }
+
         body {
             margin: 0;
             padding: 0;
+            background-color: #000;
+            /* Fallback */
             background: radial-gradient(circle at center, #1a1a1a 0%, #000000 85%);
             overflow: hidden;
             font-family: Arial, sans-serif;
