feat: Implement a focus system to visually and audibly fade game objects and speech based on screen center proximity, add related tests, and update the background gradient.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             padding: 0;
             background-color: #000;
             /* Fallback */
-            background: radial-gradient(circle at center, #1a1a1a 0%, #000000 85%);
+            background: radial-gradient(circle at center, #1a1a1a 0%, #080814 85%, #000000 100%);
             overflow: hidden;
             font-family: Arial, sans-serif;
             touch-action: manipulation;
